fix logo on mobile

--- a/app/src/common/styles/responsive.css
+++ b/app/src/common/styles/responsive.css
@@ -9,6 +9,10 @@
 }
 
 @media screen and (max-width: 1087px) {
+  .navbar.is-spaced {
+    padding: 1rem 1rem;
+  }
+
   .navbar-link {
     padding-right: 0.75rem !important;
     padding-bottom: 0px !important;
